[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments_parser = { git = "https://github.com/sergz72/arguments_parser.git"}
ctrlc = { version = "3.0", features = ["termination"] }
rand = "0.8.5"
